:sparkles: :lipstick: Fixing text overflowing page width and treating errors related to the search account feature :lipstick: :sparkles:

--- a/src/components/Ranking/Ranking.module.css
+++ b/src/components/Ranking/Ranking.module.css
@@ -1,5 +1,6 @@
 .clickable-row {
     cursor: pointer;
+    word-break: break-all;
 }
 
 .clickable-row:hover {
